[project]
name = "dynamic_population_recognition"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Halfknow", email = "halfknow0221@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "scipy>=1.9.3",
    "shap>=0.44.0",
    "matplotlib>=3.7.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"
